force-app/main/default/objects/Treatment_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Treatment Plans</relationshipLabel>
    <relationshipName>Treatment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>