force-app/main/default/objects/Treatment_Plan__c/fields/Approval_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Level 1</label>
    <type>Checkbox</type>
</CustomField>