force-app/main/default/objects/Treatment_Plan__c/fields/Approval_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Level 2</label>
    <type>Checkbox</type>
</CustomField>