force-app/main/default/objects/Treatment_Plan__c/fields/Client_Strength__c.field-meta.xml
<CustomField>
    <fullName>Client_Strength__c</fullName>
    <label>Client Strength</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>