force-app/main/default/objects/Treatment_Plan__c/fields/Client_Weakness__c.field-meta.xml
<CustomField>
    <fullName>Client_Weakness__c</fullName>
    <label>Client Weakness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>