force-app/main/default/objects/Treatment_Plan__c/fields/Clinical_supervisor__c.field-meta.xml
<CustomField>
    <fullName>Clinical_supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Treatment_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>