force-app/main/default/objects/Treatment_Plan__c/fields/Comment_1__c.field-meta.xml
<CustomField>
    <fullName>Comment_1__c</fullName>
    <label>Comment 1</label>
    <type>TextArea</type>
</CustomField>