force-app/main/default/objects/Treatment_Plan__c/fields/Comment_2__c.field-meta.xml
<CustomField>
    <fullName>Comment_2__c</fullName>
    <label>Comment 2</label>
    <type>TextArea</type>
</CustomField>