force-app/main/default/objects/Treatment_Plan__c/fields/Comment_3__c.field-meta.xml
<CustomField>
    <fullName>Comment_3__c</fullName>
    <label>Comment 3</label>
    <type>TextArea</type>
</CustomField>