force-app/main/default/objects/Treatment_Plan__c/fields/Primary_Therapist__c.field-meta.xml
<CustomField>
    <fullName>Primary_Therapist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Therapist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Treatment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>