force-app/main/default/objects/Treatment_Plan__c/fields/Signature_value_2__c.field-meta.xml
<CustomField>
    <fullName>Signature_value_2__c</fullName>
    <label>Signature value 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>