force-app/main/default/objects/Treatment_Plan__c/fields/Signed_By_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Level_2__c</fullName>
    <label>Signed By Level 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>