force-app/main/default/objects/Treatment_Plan__c/fields/Signed_By_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Signed_By_Level_3__c</fullName>
    <label>Signed By Level 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>