force-app/main/default/objects/Treatment_Plan__c/fields/Signed_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date_2__c</fullName>
    <label>Signed Date 2</label>
    <type>Date</type>
</CustomField>