force-app/main/default/objects/Treatment_Plan__c/fields/Treatment_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Plan_Name__c</fullName>
    <label>Treatment Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>